syntax = "proto3";

package booking_service;

service Booked_appointments {
  // Booked_appointments
  rpc CreateAppointment(CreateAppointmentReq) returns (Appointment);
  rpc GetAppointment(FieldValueReq) returns (Appointment);
  rpc GetAllAppointment(GetAllReq) returns (AppointmentsType);
  rpc UpdateAppointment(UpdateAppointmentReq) returns (Appointment);
  rpc DeleteAppointment(FieldValueReq) returns (StatusRes);
}

service Booked_patient{
  // Patient
  rpc CreatePatient(CreatedPatient) returns (Patient);
  rpc GetPatient(FieldValueReq) returns (Patient);
  rpc GetAllPatiens(GetAllReq) returns (PatientsType);
  rpc UpdatePatient(UpdatePatientReq) returns (Patient);
  rpc UpdatePhonePatient(UpdatePhoneNumber)returns(StatusRes);
  rpc DeletePatient(FieldValueReq) returns (StatusRes);
}

service Booked_doctor_notes{
  // Doctor Notes
  rpc CreateDoctorNote(CreatedDoctorNote) returns (DoctorNote);
  rpc GetDoctorNote(FieldValueReq) returns (DoctorNote);
  rpc GetAllNotes(GetAllReq) returns (DoctorNotesType);
  rpc UpdateDoctorNote(UpdateDoctorNoteReq) returns (DoctorNote);
  rpc DeleteDoctorNote(FieldValueReq) returns (StatusRes);
}

service  Booked_archive{
  // Archive
  rpc CreateArchive(CreatedArchive) returns (Archive);
  rpc GetArchive(FieldValueReq) returns (Archive);
  rpc GetAllArchives(GetAllReq) returns (ArchivesType);
  rpc UpdateArchive(UpdateArchiveReq) returns (Archive);
  rpc DeleteArchive(FieldValueReq) returns (StatusRes);
}

service Booked_doctor_availability{
  //DoctorAvailability
  rpc CreateDoctorAvailability(CreatedDoctorAvailability) returns (DoctorAvailability);
  rpc GetDoctorAvailability(FieldValueReq) returns (DoctorAvailability);
  rpc GetAllDoctorAvailabilitys(GetAllReq) returns (DoctorAvailabilitysType);
  rpc UpdateDoctorAvailability(UpdateDoctorAvailabilityReq) returns (DoctorAvailability);
  rpc DeleteDoctorAvailability(FieldValueReq) returns (StatusRes);
}


message Appointment {
  int64 Id = 1;
  string DepartmentId = 2;
  string DoctorId = 3;
  string PatientId = 4;
  string AppointmentDate = 5;
  string AppointmentTime = 6;
  int64 Duration = 7;
  string Key = 8;
  int32 ExpiresAt = 9;
  bool PatientStatus = 10;
  string CreatedAt = 11;
  string UpdatedAt = 12;
  string DeletedAt = 13;
}

message AppointmentsType {
  int64 Count = 1;
  repeated Appointment Appointments = 2;
}

message CreateAppointmentReq {
  string DepartmentId = 2;
  string DoctorId = 3;
  string PatientId = 4;
  string AppointmentDate = 5;
  string AppointmentTime = 6;
  int64 Duration = 7;
  string Key = 8;
  int32 ExpiresAt = 9;
  bool PatientStatus = 10;
}

message UpdateAppointmentReq {
  string AppointmentDate = 2;
  string AppointmentTime = 3;
  int64 Duration = 4;
  string Key = 5;
  int32 ExpiresAt = 6;
  bool PatientStatus = 7;
  string Field = 8;
  string Value = 9;
}

message FieldValueReq {
  string Field = 1;
  string Value = 2;
  bool DeleteStatus = 3;
}

message StatusRes {
  bool Status = 1;
}

message GetAllReq {
  string Field = 1;
  string Value = 2;
  bool DeleteStatus = 3;
  uint64 Page = 4;
  uint64 Limit = 5;
  string OrderBy = 6;
}

//

message Patient{
  string Id = 1;
  string FirstName = 2;
  string LastName = 3;
  string BirthDate = 4;
  string Gender = 5;
  string BloodGroup = 6;
  string PhoneNumber = 7;
  string City = 8;
  string Country = 9;
  string PatientProblem = 10;
  string CreatedAt = 11;
  string UpdatedAt = 12;
  string DeletedAt = 13;
}

message PatientsType{
  int64 Count = 1;
  repeated Patient Patients = 2;
}

message CreatedPatient{
  string Id = 1;
  string FirstName = 2;
  string LastName = 3;
  string BirthDate = 4;
  string Gender = 5;
  string BloodGroup = 6;
  string PhoneNumber = 7;
  string City = 8;
  string Country = 9;
  string PatientProblem = 10;
}

message UpdatePatientReq {
  string Field = 1;
  string Value = 2;
  string FirstName = 3;
  string LastName = 4;
  string BirthDate = 5;
  string Gender = 6;
  string BloodGroup = 7;
  string City = 9;
  string Country = 10;
  string PatientProblem = 11;
}

message UpdatePhoneNumber{
  string Field = 1;
  string Value = 2;
  string PhoneNumber = 3;
}

//

message DoctorNote{
  int64 Id = 1;
  int64 AppointmentId = 2;
  string DoctorId = 3;
  string PatientId = 4;
  string Prescription = 5;
  string CreatedAt = 6;
  string UpdatedAt = 7;
  string DeletedAt = 8;
}

message DoctorNotesType{
  int64 Count = 1;
  repeated DoctorNote DoctorNotes = 2;
}

message CreatedDoctorNote{
  int64 AppointmentId = 1;
  string DoctorId = 2;
  string PatientId = 3;
  string Prescription = 4;
}

message UpdateDoctorNoteReq{
  string Field = 1;
  string Value = 2;
  int64 AppointmentId = 3;
  string DoctorId = 4;
  string PatientId = 5;
  string Prescription = 6;
}

//

message Archive{
  int64 Id = 1;
  int64 DoctorAvailabilityId = 2;
  string  StartTime = 3;
  string EndTime = 4;
  string PatientProblem = 5;
  string Status = 6;
  string PaymentType = 7;
  float PaymentAmount = 8;
  string CreatedAt = 9;
  string UpdatedAt = 10;
  string DeletedAt = 11;
}

message ArchivesType{
  int64 Count = 1;
  repeated Archive Archives = 2;
}

message CreatedArchive{
  int64 DoctorAvailabilityId = 1;
  string  StartTime = 2;
  string EndTime = 3;
  string PatientProblem = 4;
  string Status = 5;
  string PaymentType = 6;
  float PaymentAmount = 7;
}

message UpdateArchiveReq{
  string Field = 1;
  string Value = 2;
  int64 DoctorAvailabilityId = 3;
  string StartTime = 4;
  string EndTime = 5;
  string PatientProblem = 6;
  string Status = 7;
  string PaymentType = 8;
  float PaymentAmount = 9;
}

//

message DoctorAvailability{
  int64 Id = 1;
  string DepartmentId = 2;
  string DoctorId = 3;
  string DoctorDate = 4;
  string StartTime = 5;
  string EndTime = 6;
  string Status = 7;
  string CreatedAt = 8;
  string UpdatedAt = 9;
  string DeletedAt = 10;
}

message  DoctorAvailabilitysType{
  int64 Count = 1;
  repeated DoctorAvailability Doctor_Availabilitys = 2;
}

message CreatedDoctorAvailability{
  string DepartmentId = 1;
  string DoctorId = 2;
  string DoctorDate = 3;
  string StartTime = 4;
  string EndTime = 5;
  string Status = 6;
}

message UpdateDoctorAvailabilityReq{
  string Field = 1;
  string Value = 2;
  string DepartmentId = 3;
  string DoctorId = 4;
  string DoctorDate = 5;
  string StartTime = 6;
  string EndTime = 7;
  string Status = 8;
}